# disentangling-computation-from-cot

./: README.md  deepseekr1_anatomy_predictions_0_to_10.csv  deepseekr1_anatomy_probe_results.csv  generate_fake_probing_data.py  main.py  pyproject.toml  questions.csv  random_testing.ipynb  requirements.txt  run_deepseekr1_anatomy.py  run_deepseekr1_eval.py  test.ipynb
.devcontainer/: devcontainer.json
probe_viz/: app.py  constants.py  data_loader.py  visualization.py
probe_viz/data/: deepseekr1_anatomy_predictions_questions_0_1.csv  deepseekr1_anatomy_probe_results_sentence_level_questions_0_1.csv
probe_viz/data/sentence_level/: question_0.csv  question_1.csv  question_2.csv  question_3.csv  question_4.csv  question_5.csv  question_6.csv  question_7.csv  question_8.csv  question_9.csv
