[project]
name = "disentangling-computation-from-cot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "datasets>=2.18",
    "dash>=2.17",
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.20",
    "torch>=2.2,<2.3",
    "transformers>=4.39",
]
