[tool.poetry]
name = "disentangling-computation-from-cot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "probe_viz"}]

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.18"
streamlit = "^1.28"
numpy = "^1.24"
pandas = "^2.0"
plotly = "^5.20"
torch = "^2.2,<2.3"
transformers = "^4.39"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
